PA3/cool.output
Terminais sem uso na gramática

    ERROR


Estado 13 conflitos: 2 de deslocamento/redução
Estado 19 conflitos: 2 de deslocamento/redução
Estado 132 conflitos: 9 de deslocamento/redução


Gramática

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error '}' ';'

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    7      | error

    8 feature_list: feature
    9             | feature_list feature
   10             | ε

   11 feature: OBJECTID ':' TYPEID ASSIGN expr ';'
   12        | OBJECTID ':' TYPEID ';'
   13        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   14        | error ';'

   15 formal_list: formal
   16            | formal_list ',' formal
   17            | ε

   18 formal: OBJECTID ':' TYPEID

   19 expr_list: expr ';'
   20          | expr_list expr ';'
   21          | error ';'
   22          | error

   23 parameters: ε
   24           | expr
   25           | parameters ',' expr

   26 case_list: case
   27          | case_list case

   28 case: OBJECTID ':' TYPEID DARROW expr ';'

   29 let_list: IN expr
   30         | ',' OBJECTID ':' TYPEID let_list
   31         | ',' OBJECTID ':' TYPEID ASSIGN expr let_list
   32         | IN error
   33         | error let_list

   34 expr: OBJECTID ASSIGN expr
   35     | expr '.' OBJECTID '(' parameters ')'
   36     | expr '@' TYPEID '.' OBJECTID '(' parameters ')'
   37     | OBJECTID '(' parameters ')'
   38     | IF expr THEN expr ELSE expr FI
   39     | WHILE expr LOOP expr POOL
   40     | '{' expr_list '}'
   41     | LET OBJECTID ':' TYPEID let_list
   42     | LET OBJECTID ':' TYPEID ASSIGN expr let_list
   43     | CASE expr OF case_list ESAC
   44     | NEW TYPEID
   45     | ISVOID expr
   46     | expr '+' expr
   47     | expr '-' expr
   48     | expr '*' expr
   49     | expr '/' expr
   50     | '~' expr
   51     | expr '<' expr
   52     | expr LE expr
   53     | expr '=' expr
   54     | NOT expr
   55     | '(' expr ')'
   56     | OBJECTID
   57     | INT_CONST
   58     | STR_CONST
   59     | BOOL_CONST


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '(' (40) 13 35 36 37 55
    ')' (41) 13 35 36 37 55
    '*' (42) 48
    '+' (43) 46
    ',' (44) 16 25 30 31
    '-' (45) 47
    '.' (46) 35 36
    '/' (47) 49
    ':' (58) 11 12 13 18 28 30 31 41 42
    ';' (59) 4 5 6 11 12 13 14 19 20 21 28
    '<' (60) 51
    '=' (61) 53
    '@' (64) 36
    '{' (123) 5 6 13 40
    '}' (125) 4 5 6 13 40
    '~' (126) 50
    error (256) 4 7 14 21 22 32 33
    CLASS (258) 5 6
    ELSE (259) 38
    FI (260) 38
    IF (261) 38
    IN (262) 29 32
    INHERITS (263) 6
    LET (264) 41 42
    LOOP (265) 39
    POOL (266) 39
    THEN (267) 38
    WHILE (268) 39
    CASE (269) 43
    ESAC (270) 43
    OF (271) 43
    DARROW (272) 28
    NEW (273) 44
    ISVOID (274) 45
    STR_CONST <symbol> (275) 58
    INT_CONST <symbol> (276) 57
    BOOL_CONST <boolean> (277) 59
    TYPEID <symbol> (278) 5 6 11 12 13 18 28 30 31 36 41 42 44
    OBJECTID <symbol> (279) 11 12 13 18 28 30 31 34 35 36 37 41 42 56
    ASSIGN (280) 11 31 34 42
    NOT (281) 54
    LE (282) 52
    ERROR (283)


Não terminais com as regras onde eles aparecem

    $accept (45)
        à esquerda: 0
    program <program> (46)
        à esquerda: 1
        à direita: 0
    class_list <classes> (47)
        à esquerda: 2 3 4
        à direita: 1 3
    class <class_> (48)
        à esquerda: 5 6 7
        à direita: 2 3
    feature_list <features> (49)
        à esquerda: 8 9 10
        à direita: 5 6 9
    feature <feature> (50)
        à esquerda: 11 12 13 14
        à direita: 8 9
    formal_list <formals> (51)
        à esquerda: 15 16 17
        à direita: 13 16
    formal <formal> (52)
        à esquerda: 18
        à direita: 15 16
    expr_list <expressions> (53)
        à esquerda: 19 20 21 22
        à direita: 20 40
    parameters <expressions> (54)
        à esquerda: 23 24 25
        à direita: 25 35 36 37
    case_list <cases> (55)
        à esquerda: 26 27
        à direita: 27 43
    case <case_> (56)
        à esquerda: 28
        à direita: 26 27
    let_list <expression> (57)
        à esquerda: 29 30 31 32 33
        à direita: 30 31 33 41 42
    expr <expression> (58)
        à esquerda: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        à direita: 11 13 19 20 24 25 28 29 31 34 35 36 38 39 42 43 45 46 47 48 49 50 51 52 53 54 55


Estado 0

    0 $accept: • program $end

    error  deslocar, e ir ao estado 1
    CLASS  deslocar, e ir ao estado 2

    program     ir ao estado 3
    class_list  ir ao estado 4
    class       ir ao estado 5


Estado 1

    4 class_list: error • '}' ';'
    7 class: error •

    '}'  deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 7 (class)


Estado 2

    5 class: CLASS • TYPEID '{' feature_list '}' ';'
    6      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  deslocar, e ir ao estado 7


Estado 3

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 8


Estado 4

    1 program: class_list •
    3 class_list: class_list • class

    error  deslocar, e ir ao estado 9
    CLASS  deslocar, e ir ao estado 2

    $end  reduzir usando a regra 1 (program)

    class  ir ao estado 10


Estado 5

    2 class_list: class •

    $padrão  reduzir usando a regra 2 (class_list)


Estado 6

    4 class_list: error '}' • ';'

    ';'  deslocar, e ir ao estado 11


Estado 7

    5 class: CLASS TYPEID • '{' feature_list '}' ';'
    6      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  deslocar, e ir ao estado 12
    '{'       deslocar, e ir ao estado 13


Estado 8

    0 $accept: program $end •

    $padrão  aceitar


Estado 9

    7 class: error •

    $padrão  reduzir usando a regra 7 (class)


Estado 10

    3 class_list: class_list class •

    $padrão  reduzir usando a regra 3 (class_list)


Estado 11

    4 class_list: error '}' ';' •

    $padrão  reduzir usando a regra 4 (class_list)


Estado 12

    6 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  deslocar, e ir ao estado 14


Estado 13

    5 class: CLASS TYPEID '{' • feature_list '}' ';'

    error     deslocar, e ir ao estado 15
    OBJECTID  deslocar, e ir ao estado 16

    error     [reduzir usando a regra 10 (feature_list)]
    OBJECTID  [reduzir usando a regra 10 (feature_list)]
    '}'       reduzir usando a regra 10 (feature_list)

    feature_list  ir ao estado 17
    feature       ir ao estado 18


Estado 14

    6 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  deslocar, e ir ao estado 19


Estado 15

   14 feature: error • ';'

    ';'  deslocar, e ir ao estado 20


Estado 16

   11 feature: OBJECTID • ':' TYPEID ASSIGN expr ';'
   12        | OBJECTID • ':' TYPEID ';'
   13        | OBJECTID • '(' formal_list ')' ':' TYPEID '{' expr '}' ';'

    ':'  deslocar, e ir ao estado 21
    '('  deslocar, e ir ao estado 22


Estado 17

    5 class: CLASS TYPEID '{' feature_list • '}' ';'
    9 feature_list: feature_list • feature

    error     deslocar, e ir ao estado 15
    OBJECTID  deslocar, e ir ao estado 16
    '}'       deslocar, e ir ao estado 23

    feature  ir ao estado 24


Estado 18

    8 feature_list: feature •

    $padrão  reduzir usando a regra 8 (feature_list)


Estado 19

    6 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    error     deslocar, e ir ao estado 15
    OBJECTID  deslocar, e ir ao estado 16

    error     [reduzir usando a regra 10 (feature_list)]
    OBJECTID  [reduzir usando a regra 10 (feature_list)]
    '}'       reduzir usando a regra 10 (feature_list)

    feature_list  ir ao estado 25
    feature       ir ao estado 18


Estado 20

   14 feature: error ';' •

    $padrão  reduzir usando a regra 14 (feature)


Estado 21

   11 feature: OBJECTID ':' • TYPEID ASSIGN expr ';'
   12        | OBJECTID ':' • TYPEID ';'

    TYPEID  deslocar, e ir ao estado 26


Estado 22

   13 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 17 (formal_list)

    formal_list  ir ao estado 28
    formal       ir ao estado 29


Estado 23

    5 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  deslocar, e ir ao estado 30


Estado 24

    9 feature_list: feature_list feature •

    $padrão  reduzir usando a regra 9 (feature_list)


Estado 25

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'
    9 feature_list: feature_list • feature

    error     deslocar, e ir ao estado 15
    OBJECTID  deslocar, e ir ao estado 16
    '}'       deslocar, e ir ao estado 31

    feature  ir ao estado 24


Estado 26

   11 feature: OBJECTID ':' TYPEID • ASSIGN expr ';'
   12        | OBJECTID ':' TYPEID • ';'

    ASSIGN  deslocar, e ir ao estado 32
    ';'     deslocar, e ir ao estado 33


Estado 27

   18 formal: OBJECTID • ':' TYPEID

    ':'  deslocar, e ir ao estado 34


Estado 28

   13 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expr '}' ';'
   16 formal_list: formal_list • ',' formal

    ')'  deslocar, e ir ao estado 35
    ','  deslocar, e ir ao estado 36


Estado 29

   15 formal_list: formal •

    $padrão  reduzir usando a regra 15 (formal_list)


Estado 30

    5 class: CLASS TYPEID '{' feature_list '}' ';' •

    $padrão  reduzir usando a regra 5 (class)


Estado 31

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  deslocar, e ir ao estado 37


Estado 32

   11 feature: OBJECTID ':' TYPEID ASSIGN • expr ';'

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr  ir ao estado 52


Estado 33

   12 feature: OBJECTID ':' TYPEID ';' •

    $padrão  reduzir usando a regra 12 (feature)


Estado 34

   18 formal: OBJECTID ':' • TYPEID

    TYPEID  deslocar, e ir ao estado 53


Estado 35

   13 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expr '}' ';'

    ':'  deslocar, e ir ao estado 54


Estado 36

   16 formal_list: formal_list ',' • formal

    OBJECTID  deslocar, e ir ao estado 27

    formal  ir ao estado 55


Estado 37

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $padrão  reduzir usando a regra 6 (class)


Estado 38

   38 expr: IF • expr THEN expr ELSE expr FI

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr  ir ao estado 56


Estado 39

   41 expr: LET • OBJECTID ':' TYPEID let_list
   42     | LET • OBJECTID ':' TYPEID ASSIGN expr let_list

    OBJECTID  deslocar, e ir ao estado 57


Estado 40

   39 expr: WHILE • expr LOOP expr POOL

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr  ir ao estado 58


Estado 41

   43 expr: CASE • expr OF case_list ESAC

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr  ir ao estado 59


Estado 42

   44 expr: NEW • TYPEID

    TYPEID  deslocar, e ir ao estado 60


Estado 43

   45 expr: ISVOID • expr

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr  ir ao estado 61


Estado 44

   58 expr: STR_CONST •

    $padrão  reduzir usando a regra 58 (expr)


Estado 45

   57 expr: INT_CONST •

    $padrão  reduzir usando a regra 57 (expr)


Estado 46

   59 expr: BOOL_CONST •

    $padrão  reduzir usando a regra 59 (expr)


Estado 47

   34 expr: OBJECTID • ASSIGN expr
   37     | OBJECTID • '(' parameters ')'
   56     | OBJECTID •

    ASSIGN  deslocar, e ir ao estado 62
    '('     deslocar, e ir ao estado 63

    $padrão  reduzir usando a regra 56 (expr)


Estado 48

   54 expr: NOT • expr

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr  ir ao estado 64


Estado 49

   50 expr: '~' • expr

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr  ir ao estado 65


Estado 50

   40 expr: '{' • expr_list '}'

    error       deslocar, e ir ao estado 66
    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr_list  ir ao estado 67
    expr       ir ao estado 68


Estado 51

   55 expr: '(' • expr ')'

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr  ir ao estado 69


Estado 52

   11 feature: OBJECTID ':' TYPEID ASSIGN expr • ';'
   35 expr: expr • '.' OBJECTID '(' parameters ')'
   36     | expr • '@' TYPEID '.' OBJECTID '(' parameters ')'
   46     | expr • '+' expr
   47     | expr • '-' expr
   48     | expr • '*' expr
   49     | expr • '/' expr
   51     | expr • '<' expr
   52     | expr • LE expr
   53     | expr • '=' expr

    LE   deslocar, e ir ao estado 70
    '<'  deslocar, e ir ao estado 71
    '='  deslocar, e ir ao estado 72
    '+'  deslocar, e ir ao estado 73
    '-'  deslocar, e ir ao estado 74
    '*'  deslocar, e ir ao estado 75
    '/'  deslocar, e ir ao estado 76
    '@'  deslocar, e ir ao estado 77
    '.'  deslocar, e ir ao estado 78
    ';'  deslocar, e ir ao estado 79


Estado 53

   18 formal: OBJECTID ':' TYPEID •

    $padrão  reduzir usando a regra 18 (formal)


Estado 54

   13 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expr '}' ';'

    TYPEID  deslocar, e ir ao estado 80


Estado 55

   16 formal_list: formal_list ',' formal •

    $padrão  reduzir usando a regra 16 (formal_list)


Estado 56

   35 expr: expr • '.' OBJECTID '(' parameters ')'
   36     | expr • '@' TYPEID '.' OBJECTID '(' parameters ')'
   38     | IF expr • THEN expr ELSE expr FI
   46     | expr • '+' expr
   47     | expr • '-' expr
   48     | expr • '*' expr
   49     | expr • '/' expr
   51     | expr • '<' expr
   52     | expr • LE expr
   53     | expr • '=' expr

    THEN  deslocar, e ir ao estado 81
    LE    deslocar, e ir ao estado 70
    '<'   deslocar, e ir ao estado 71
    '='   deslocar, e ir ao estado 72
    '+'   deslocar, e ir ao estado 73
    '-'   deslocar, e ir ao estado 74
    '*'   deslocar, e ir ao estado 75
    '/'   deslocar, e ir ao estado 76
    '@'   deslocar, e ir ao estado 77
    '.'   deslocar, e ir ao estado 78


Estado 57

   41 expr: LET OBJECTID • ':' TYPEID let_list
   42     | LET OBJECTID • ':' TYPEID ASSIGN expr let_list

    ':'  deslocar, e ir ao estado 82


Estado 58

   35 expr: expr • '.' OBJECTID '(' parameters ')'
   36     | expr • '@' TYPEID '.' OBJECTID '(' parameters ')'
   39     | WHILE expr • LOOP expr POOL
   46     | expr • '+' expr
   47     | expr • '-' expr
   48     | expr • '*' expr
   49     | expr • '/' expr
   51     | expr • '<' expr
   52     | expr • LE expr
   53     | expr • '=' expr

    LOOP  deslocar, e ir ao estado 83
    LE    deslocar, e ir ao estado 70
    '<'   deslocar, e ir ao estado 71
    '='   deslocar, e ir ao estado 72
    '+'   deslocar, e ir ao estado 73
    '-'   deslocar, e ir ao estado 74
    '*'   deslocar, e ir ao estado 75
    '/'   deslocar, e ir ao estado 76
    '@'   deslocar, e ir ao estado 77
    '.'   deslocar, e ir ao estado 78


Estado 59

   35 expr: expr • '.' OBJECTID '(' parameters ')'
   36     | expr • '@' TYPEID '.' OBJECTID '(' parameters ')'
   43     | CASE expr • OF case_list ESAC
   46     | expr • '+' expr
   47     | expr • '-' expr
   48     | expr • '*' expr
   49     | expr • '/' expr
   51     | expr • '<' expr
   52     | expr • LE expr
   53     | expr • '=' expr

    OF   deslocar, e ir ao estado 84
    LE   deslocar, e ir ao estado 70
    '<'  deslocar, e ir ao estado 71
    '='  deslocar, e ir ao estado 72
    '+'  deslocar, e ir ao estado 73
    '-'  deslocar, e ir ao estado 74
    '*'  deslocar, e ir ao estado 75
    '/'  deslocar, e ir ao estado 76
    '@'  deslocar, e ir ao estado 77
    '.'  deslocar, e ir ao estado 78


Estado 60

   44 expr: NEW TYPEID •

    $padrão  reduzir usando a regra 44 (expr)


Estado 61

   35 expr: expr • '.' OBJECTID '(' parameters ')'
   36     | expr • '@' TYPEID '.' OBJECTID '(' parameters ')'
   45     | ISVOID expr •
   46     | expr • '+' expr
   47     | expr • '-' expr
   48     | expr • '*' expr
   49     | expr • '/' expr
   51     | expr • '<' expr
   52     | expr • LE expr
   53     | expr • '=' expr

    '@'  deslocar, e ir ao estado 77
    '.'  deslocar, e ir ao estado 78

    $padrão  reduzir usando a regra 45 (expr)


Estado 62

   34 expr: OBJECTID ASSIGN • expr

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr  ir ao estado 85


Estado 63

   37 expr: OBJECTID '(' • parameters ')'

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    $padrão  reduzir usando a regra 23 (parameters)

    parameters  ir ao estado 86
    expr        ir ao estado 87


Estado 64

   35 expr: expr • '.' OBJECTID '(' parameters ')'
   36     | expr • '@' TYPEID '.' OBJECTID '(' parameters ')'
   46     | expr • '+' expr
   47     | expr • '-' expr
   48     | expr • '*' expr
   49     | expr • '/' expr
   51     | expr • '<' expr
   52     | expr • LE expr
   53     | expr • '=' expr
   54     | NOT expr •

    LE   deslocar, e ir ao estado 70
    '<'  deslocar, e ir ao estado 71
    '='  deslocar, e ir ao estado 72
    '+'  deslocar, e ir ao estado 73
    '-'  deslocar, e ir ao estado 74
    '*'  deslocar, e ir ao estado 75
    '/'  deslocar, e ir ao estado 76
    '@'  deslocar, e ir ao estado 77
    '.'  deslocar, e ir ao estado 78

    $padrão  reduzir usando a regra 54 (expr)


Estado 65

   35 expr: expr • '.' OBJECTID '(' parameters ')'
   36     | expr • '@' TYPEID '.' OBJECTID '(' parameters ')'
   46     | expr • '+' expr
   47     | expr • '-' expr
   48     | expr • '*' expr
   49     | expr • '/' expr
   50     | '~' expr •
   51     | expr • '<' expr
   52     | expr • LE expr
   53     | expr • '=' expr

    '@'  deslocar, e ir ao estado 77
    '.'  deslocar, e ir ao estado 78

    $padrão  reduzir usando a regra 50 (expr)


Estado 66

   21 expr_list: error • ';'
   22          | error •

    ';'  deslocar, e ir ao estado 88

    $padrão  reduzir usando a regra 22 (expr_list)


Estado 67

   20 expr_list: expr_list • expr ';'
   40 expr: '{' expr_list • '}'

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '}'         deslocar, e ir ao estado 89
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr  ir ao estado 90


Estado 68

   19 expr_list: expr • ';'
   35 expr: expr • '.' OBJECTID '(' parameters ')'
   36     | expr • '@' TYPEID '.' OBJECTID '(' parameters ')'
   46     | expr • '+' expr
   47     | expr • '-' expr
   48     | expr • '*' expr
   49     | expr • '/' expr
   51     | expr • '<' expr
   52     | expr • LE expr
   53     | expr • '=' expr

    LE   deslocar, e ir ao estado 70
    '<'  deslocar, e ir ao estado 71
    '='  deslocar, e ir ao estado 72
    '+'  deslocar, e ir ao estado 73
    '-'  deslocar, e ir ao estado 74
    '*'  deslocar, e ir ao estado 75
    '/'  deslocar, e ir ao estado 76
    '@'  deslocar, e ir ao estado 77
    '.'  deslocar, e ir ao estado 78
    ';'  deslocar, e ir ao estado 91


Estado 69

   35 expr: expr • '.' OBJECTID '(' parameters ')'
   36     | expr • '@' TYPEID '.' OBJECTID '(' parameters ')'
   46     | expr • '+' expr
   47     | expr • '-' expr
   48     | expr • '*' expr
   49     | expr • '/' expr
   51     | expr • '<' expr
   52     | expr • LE expr
   53     | expr • '=' expr
   55     | '(' expr • ')'

    LE   deslocar, e ir ao estado 70
    '<'  deslocar, e ir ao estado 71
    '='  deslocar, e ir ao estado 72
    '+'  deslocar, e ir ao estado 73
    '-'  deslocar, e ir ao estado 74
    '*'  deslocar, e ir ao estado 75
    '/'  deslocar, e ir ao estado 76
    '@'  deslocar, e ir ao estado 77
    '.'  deslocar, e ir ao estado 78
    ')'  deslocar, e ir ao estado 92


Estado 70

   52 expr: expr LE • expr

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr  ir ao estado 93


Estado 71

   51 expr: expr '<' • expr

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr  ir ao estado 94


Estado 72

   53 expr: expr '=' • expr

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr  ir ao estado 95


Estado 73

   46 expr: expr '+' • expr

    IF          deslocar, e ir ao estado 38
    LET         deslocar, e ir ao estado 39
    WHILE       deslocar, e ir ao estado 40
    CASE        deslocar, e ir ao estado 41
    NEW         deslocar, e ir ao estado 42
    ISVOID      deslocar, e ir ao estado 43
    STR_CONST   deslocar, e ir ao estado 44
    INT_CONST   deslocar, e ir ao estado 45
    BOOL_CONST  deslocar, e ir ao estado 46
    OBJECTID    deslocar, e ir ao estado 47
    NOT         deslocar, e ir ao estado 48
    '~'         deslocar, e ir ao estado 49
    '{'         deslocar, e ir ao estado 50
    '('         deslocar, e ir ao estado 51

    expr  ir ao estado 96


Estado 74

   47 expr: expr '-' • expr
